definition des 3 couleurs principales

--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-<<<<<<< HEAD
-        <link rel="stylesheet" href=".public/css/style.css" />
-=======
-        <link rel="stylesheet" href="style.css" />
->>>>>>> 171f759298f44c1cdd6bd1e5515d4010b3292cfc
+        <link rel="stylesheet" href="/.public/css/style.css" />
         <title>Oh My Food</title>
     </head>
 
