création header et partie recherche par localité

--- a/index.html
+++ b/index.html
@@ -2,10 +2,28 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="/.public/css/style.css" />
+        <script src="https://kit.fontawesome.com/266d78328b.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href=".public/css/style.css" />
         <title>Oh My Food</title>
     </head>
 
     <body>
+        
+        <header>
+            <img src="images/logo/ohmyfood.png" alt="logo OhMyFood">
+        </header>
+
+        <main>
+            <!--recherche-->
+            <div class="recherche">
+                <i class="fas fa-map-marker-alt"></i>
+                <input type="search" name="ville" value="Paris, Belleville">
+            </div>
+            <div class="explorez">
+                <h2>Réservez le menu qui vous convient</h2>
+                <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                <button class="bouton_recherche">Explorer nos restaurants</button>
+            </div>
+        </main>
     </body>
 </html>
