ajout du tuto de fonctionnement

--- a/index.html
+++ b/index.html
@@ -14,16 +14,43 @@
         </header>
 
         <main>
+            
+            <section>
             <!--recherche-->
-            <div class="recherche">
-                <i class="fas fa-map-marker-alt"></i>
-                <input type="search" name="ville" value="Paris, Belleville">
-            </div>
-            <div class="explorez">
-                <h2>Réservez le menu qui vous convient</h2>
-                <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                <button class="bouton_recherche">Explorer nos restaurants</button>
-            </div>
+                <div class="recherche">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <input type="search" name="ville" value="Paris, Belleville">
+                </div>
+                <div class="explorez">
+                    <h2>Réservez le menu qui vous convient</h2>
+                    <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                    <button class="bouton_recherche">Explorer nos restaurants</button>
+                </div>
+            </section>
+
+            <section>
+            <!--Tuto-->
+                <div class="tuto">
+                    <h2>Fonctionnement</h2>
+                    <div class="tuto__etapes">
+                        <div class="tuto__etapes__detail">
+                            <p class="tuto__etapes__detail__chiffre">1</p>
+                            <i class="fa-solid fa-mobile-screen-button"></i>
+                            <p class="tuto__etapes__detail__texte">Choisissez un restaurant</p>
+                        </div>
+                        <div class="tuto__etapes__detail">
+                            <p class="tuto__etapes__detail__chiffre">2</p>
+                            <i class="fa-solid fa-list"></i>
+                            <p class="tuto__etapes__detail__texte">Composez votre menu</p>
+                        </div>
+                        <div class="tuto__etapes__detail">
+                            <p class="tuto__etapes__detail__chiffre">3</p>
+                            <i class="fa-solid fa-store"></i>
+                            <p class="tuto__etapes__detail__texte">Dégustez au restaurant</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
