--- a/index.html
+++ b/index.html
@@ -51,6 +51,95 @@
                     </div>
                 </div>
             </section>
+
+            <section>
+            <!--Presentation des restaurants-->
+                <div class="restaurants">
+                    <h2>Restaurants</h2>
+                    <div class="restaurants__align">
+                        
+                        <!--La Palette du goût-->
+                        <div class="restaurants__card">
+                            <a href="#">   
+                                <div class="restaurants__card__image">
+                                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La Palette du Goût">
+                                </div>
+                                <div class="restaurants__card__body">
+                                    <div class="restaurants__card__text">
+                                        <h3>La palette du goût</h3>
+                                        <p>Ménilmontant</p>
+                                    </div>
+                                    <i class="fa-solid fa-heart"></i>
+                                </div>
+                            </a>
+                        </div>
+
+                        <!--La note enchantée-->
+                        <div class="restaurants__card">
+                            <a href="#">   
+                                <div class="restaurants__card__image">
+                                    <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
+                                </div>
+                                <div class="restaurants__card__body">
+                                    <div class="restaurants__card__text">
+                                        <h3>La note enchantée</h3>
+                                        <p>Charonne</p>
+                                    </div>
+                                    <i class="fa-solid fa-heart"></i>
+                                </div>
+                            </a>
+                        </div>
+
+                        <!--A la Française-->
+                        <div class="restaurants__card">
+                            <a href="#">   
+                                <div class="restaurants__card__image">
+                                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant A la française">
+                                </div>
+                                <div class="restaurants__card__body">
+                                    <div class="restaurants__card__text">
+                                        <h3>&Agrave; la fran&ccedil;aise</h3>
+                                        <p>Cité rouge</p>
+                                    </div>
+                                    <i class="fa-solid fa-heart"></i>
+                                </div>
+                            </a>
+                        </div>
+
+                        <!--Le délice des sens-->
+                        <div class="restaurants__card">
+                            <a href="#">   
+                                <div class="restaurants__card__image">
+                                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délice des sens">
+                                </div>
+                                <div class="restaurants__card__body">
+                                    <div class="restaurants__card__text">
+                                        <h3>Le délice des sens</h3>
+                                        <p>Folie-Méricourt</p>
+                                    </div>
+                                    <i class="fa-solid fa-heart"></i>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
+        
+        <footer>
+            <img src="images/logo/ohmyfood@2x.svg" alt="logo OhMyFood">
+        <div class="footer-list">
+            <div class="footer-list__with-icon">
+                <i class="fa-solid fa-utensils"></i>
+                <p>Proposer un restaurant</p>
+            </div>
+            <div class="footer-list__with-icon">
+                <i class="fa-solid fa-handshake-angle"></i>
+                <p>Devenir partenaire</p>
+            </div>
+            <p>Mentions légales</p>
+            <p>Contact</p>
+        </div>
+        </footer>
     </body>
 </html>
