ajout linear-gradient et footer.scss

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!--recherche-->
                 <div class="recherche">
                     <i class="fas fa-map-marker-alt"></i>
-                    <input type="search" name="ville" value="Paris, Belleville">
+                    <input type="text" name="ville" value="Paris, Belleville">
                 </div>
                 <div class="explorez">
                     <h2>Réservez le menu qui vous convient</h2>
