--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -11,7 +11,9 @@
         
         <header>
             <div class="menu_logo">
-                <i class="fa-solid fa-arrow-left"></i>
+                <a href="index.html">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </a>
                 <img src="images/logo/ohmyfood.png" alt="logo OhMyFood">
             </div>
             <div class="menu_image">
@@ -19,6 +21,11 @@
             </div>
         </header>
 
-        <figure></figure>
+        <section class="menu_dishes">
+            <div class="menu_dishes__header">
+                <h1>La palette du goût</h1>
+                <i class="fa-solid fa-heart"></i>
+            </div>
+        </section>
 
     </body>
