moving heart icon css in his own layout files

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -24,7 +24,7 @@
         <section class="menu_dishes">
             <div class="menu_dishes__header">
                 <h1>La palette du goût</h1>
-                <i class="fa-solid fa-heart"></i>
+                <i class="fa-solid fa-heart heart-icon"></i>
             </div>
         </section>
 
