ajout underline sous catégories + icon check

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -24,7 +24,25 @@
         <section class="menu_dishes">
             <div class="menu_dishes__header">
                 <h1>La palette du goût</h1>
-                <i class="fa-solid fa-heart heart-icon"></i>
+                <i class="fa-solid fa-heart heart-icon heart-icon--menupage"></i>
+            </div>
+            
+            <div class="menu_dishes__details">
+                <div class="menu_dishes__details__title">    
+                    <p>ENTR&Eacute;ES</p>
+                </div>
+                <div class="dishes-card">
+                    <div class="dishes-card__text">
+                        <p>Fricassée d'escargot</p>
+                        <p>Au piment d'espelette</p>
+                    </div>
+                    <div class="dishes-card__price">
+                        <p>25€</p>
+                        <div class="dishes-card__price__icon">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
