--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                         <h3>La palette du goût</h3>
                                         <p>Ménilmontant</p>
                                     </div>
-                                    <i class="fa-solid fa-heart heart-icon"></i>
+                                    <i class="fa-solid fa-heart heart-icon heart-icon--homepage"></i>
                                 </div>
                             </a>
                         </div>
@@ -85,7 +85,7 @@
                                         <h3>La note enchantée</h3>
                                         <p>Charonne</p>
                                     </div>
-                                    <i class="fa-solid fa-heart heart-icon"></i>
+                                    <i class="fa-solid fa-heart heart-icon heart-icon--homepage"></i>
                                 </div>
                             </a>
                         </div>
@@ -101,7 +101,7 @@
                                         <h3>&Agrave; la fran&ccedil;aise</h3>
                                         <p>Cité rouge</p>
                                     </div>
-                                    <i class="fa-solid fa-heart heart-icon"></i>
+                                    <i class="fa-solid fa-heart heart-icon heart-icon--homepage"></i>
                                 </div>
                             </a>
                         </div>
@@ -117,7 +117,7 @@
                                         <h3>Le délice des sens</h3>
                                         <p>Folie-Méricourt</p>
                                     </div>
-                                    <i class="fa-solid fa-heart heart-icon"></i>
+                                    <i class="fa-solid fa-heart heart-icon heart-icon--homepage"></i>
                                 </div>
                             </a>
                         </div>
