ajout de tous les plats et du bouton commander

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="explorez">
                     <h2>Réservez le menu qui vous convient</h2>
                     <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                    <button class="bouton_recherche">Explorer nos restaurants</button>
+                    <button class="button button--search">Explorer nos restaurants</button>
                 </div>
             </section>
 
