--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         
                         <!--La Palette du goût-->
                         <div class="restaurants__card">
-                            <a href="#">   
+                            <a href="la-palette-du-gout.html">   
                                 <div class="restaurants__card__image">
                                     <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La Palette du Goût">
                                 </div>
@@ -76,7 +76,7 @@
 
                         <!--La note enchantée-->
                         <div class="restaurants__card">
-                            <a href="#">   
+                            <a href="la-note-enchantee.html">   
                                 <div class="restaurants__card__image">
                                     <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
                                 </div>
@@ -92,7 +92,7 @@
 
                         <!--A la Française-->
                         <div class="restaurants__card">
-                            <a href="#">   
+                            <a href="a-la-francaise.html">   
                                 <div class="restaurants__card__image">
                                     <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant A la française">
                                 </div>
@@ -108,7 +108,7 @@
 
                         <!--Le délice des sens-->
                         <div class="restaurants__card">
-                            <a href="#">   
+                            <a href="le-delice-des-sens.html">   
                                 <div class="restaurants__card__image">
                                     <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délice des sens">
                                 </div>
