added link on logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <body>
         
         <header>
-            <img src="images/logo/ohmyfood.png" alt="logo OhMyFood">
+            <a href="index.html">
+                <img src="images/logo/ohmyfood.png" alt="logo OhMyFood">
+            </a>
         </header>
 
         <main>
