added keyframe for menupage animation

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -33,7 +33,7 @@
                     <p>ENTR&Eacute;ES</p>
                 </div>
                 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--1">
                     <div class="dishes-card__text">
                         <p>Fricassée d'escargot</p>
                         <p>Au piment d'espelette</p>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--2">
                     <div class="dishes-card__text">
                         <p>Foie gras de canard mi-cuit</p>
                         <p>Et ses copeaux de truffe noire</p>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--3">
                     <div class="dishes-card__text">
                         <p>Oeuf au plat</p>
                         <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -76,7 +76,7 @@
                     <p>PLATS</p>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--4">
                     <div class="dishes-card__text">
                         <p>Filet de boeuf aux herbes</p>
                         <p>Accompagné de sa ribambelle de légumes</p>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--5">
                     <div class="dishes-card__text">
                         <p>Parmentier de queue de boeuf</p>
                         <p>A la truffe noire sur sa purée de panais</p>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--6">
                     <div class="dishes-card__text">
                         <p>Filet de turbot</p>
                         <p>Aux agrumes</p>
@@ -119,7 +119,7 @@
                     <p>DESSERTS</p>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--7">
                     <div class="dishes-card__text">
                         <p>Paris-Brest</p>
                         <p>Revisité</p>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--8">
                     <div class="dishes-card__text">
                         <p>Macaron au chocolat d'exception</p>
                         <p>Et glace à la vanille de Madagascar</p>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--9">
                     <div class="dishes-card__text">
                         <p>Mousse au chocolat</p>
                         <p>Au pimet d'espelette et à la truffe noire</p>
