add animation delay class on all restaurant pages

--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -33,7 +33,7 @@
                     <p>ENTR&Eacute;ES</p>
                 </div>
                 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--1">
                     <div class="dishes-card__text">
                         <p>Tartare de thon</p>
                         <p>Assaisonné au yuzu</p>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--2">
                     <div class="dishes-card__text">
                         <p>Bouchée de homard croustillant</p>
                         <p>Et sa farandole de petits légumes</p>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--3">
                     <div class="dishes-card__text">
                         <p>Velouté de cèpes</p>
                         <p>Aux truffes</p>
@@ -76,7 +76,7 @@
                     <p>PLATS</p>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--4">
                     <div class="dishes-card__text">
                         <p>Poulet rôti aux herbes de provence</p>
                         <p>Et sa crème de truffe</p>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--5">
                     <div class="dishes-card__text">
                         <p>Langouste rôtie</p>
                         <p>Et ses légumes de saison</p>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--6">
                     <div class="dishes-card__text">
                         <p>Côte de boeuf angus</p>
                         <p>Et sa purée de panais</p>
@@ -119,7 +119,7 @@
                     <p>DESSERTS</p>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--7">
                     <div class="dishes-card__text">
                         <p>Farandole de desserts</p>
                         <p>Du chef</p>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--8">
                     <div class="dishes-card__text">
                         <p>Crème brulée</p>
                         <p>Revisitée</p>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--9">
                     <div class="dishes-card__text">
                         <p>Tiramisu</p>
                         <p>&Agrave; la noisette</p>
