--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -33,7 +33,7 @@
                     <p>ENTR&Eacute;ES</p>
                 </div>
                 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--1">
                     <div class="dishes-card__text">
                         <p>Tartare de poulpe acidulé</p>
                         <p>Aux zests d'orange</p>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--2">
                     <div class="dishes-card__text">
                         <p>Velouté de légumes d'antan</p>
                         <p>Carotte, panais, topinambour</p>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--3">
                     <div class="dishes-card__text">
                         <p>Soupe à l'oignon</p>
                         <p>Revisitée</p>
@@ -76,7 +76,7 @@
                     <p>PLATS</p>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--4">
                     <div class="dishes-card__text">
                         <p>Coquilles Saint-Jacques</p>
                         <p>Accompagnées d'une purée de panais</p>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--5">
                     <div class="dishes-card__text">
                         <p>Magret de canard</p>
                         <p>Et parmentier de pommes de terres</p>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--6">
                     <div class="dishes-card__text">
                         <p>Pigeonneau d'Ille-et-Vilaine</p>
                         <p>Sur son lit de gnocchis aux légumes</p>
@@ -119,7 +119,7 @@
                     <p>DESSERTS</p>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--7">
                     <div class="dishes-card__text">
                         <p>Pétales de violettes glacés</p>
                         <p>Et purée de noisettes</p>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--8">
                     <div class="dishes-card__text">
                         <p>Fondant au chocolat</p>
                         <p>Revisité</p>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--9">
                     <div class="dishes-card__text">
                         <p>Millefeuille croustillant</p>
                         <p>Myrtilles et pâte d'amande</p>
