--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -33,7 +33,7 @@
                     <p>ENTR&Eacute;ES</p>
                 </div>
                 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--1">
                     <div class="dishes-card__text">
                         <p>Ravioles de foie gras</p>
                         <p>Accompagnés de leur crème à la truffe</p>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--2">
                     <div class="dishes-card__text">
                         <p>Caviar osciètre</p>
                         <p>Sur blini à la farine de blé noir</p>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--3">
                     <div class="dishes-card__text">
                         <p>Homard et espuma de potiron</p>
                         <p>Mariné aux zestes d'orange</p>
@@ -72,7 +72,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--4">
                     <div class="dishes-card__text">
                         <p>Foie gras de canard cuit entier</p>
                         <p>Confiture de figue et pain toasté</p>
@@ -89,7 +89,7 @@
                     <p>PLATS</p>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--5">
                     <div class="dishes-card__text">
                         <p>Noix de coquille Saint-Jacques</p>
                         <p>Sur lit de purée de céleri-rave</p>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--6">
                     <div class="dishes-card__text">
                         <p>Langoustine poêlée</p>
                         <p>Purée de patate douce</p>
@@ -115,7 +115,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--7">
                     <div class="dishes-card__text">
                         <p>Mijoté de queue de boeuf</p>
                         <p>Et riz sauvage aux zestes de citron</p>
@@ -132,7 +132,7 @@
                     <p>DESSERTS</p>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--8">
                     <div class="dishes-card__text">
                         <p>Macaron noisette et chocolat</p>
                         <p>Glace au caramel brun et sel de guérande</p>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--9">
                     <div class="dishes-card__text">
                         <p>Baba au rhum revisité</p>
                         <p>Avec son coulis de citron</p>
@@ -158,7 +158,7 @@
                     </div>
                 </div>
 
-                <div class="dishes-card">
+                <div class="dishes-card dishes-card--10">
                     <div class="dishes-card__text">
                         <p>Tarte au citron meringuée</p>
                         <p>Destructurée</p>
