--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <script src="https://kit.fontawesome.com/266d78328b.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href=".public/css/style.css" />
+        <link rel="stylesheet" href="public/css/style.css" />
         <title>La palette du goût</title>
     </head>
 
