added link on footer

--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
         <div class="footer-list">
             <div class="footer-list__with-icon">
                 <i class="fa-solid fa-utensils"></i>
-                <p>Proposer un restaurant</p>
+                <a href="#">&nbsp;Proposer un restaurant</a>
             </div>
             <div class="footer-list__with-icon">
                 <i class="fa-solid fa-handshake-angle"></i>
-                <p>Devenir partenaire</p>
+                <a href="#">Devenir partenaire</a>
             </div>
-            <p>Mentions légales</p>
-            <p>Contact</p>
+            <a href="#">Mentions légales</a>
+            <a href="#">Contact</a>
         </div>
         </footer>
     </body>
