--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
         <script src="https://kit.fontawesome.com/266d78328b.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="public/css/style.css" />
         <title>Oh My Food</title>
