--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                         <!--La Palette du goût-->
                         <div class="restaurants__card">
                             <a href="la-palette-du-gout.html">   
+                                <div class="new">
+                                    <p>Nouveau</p>
+                                </div>
                                 <div class="restaurants__card__image">
                                     <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La Palette du Goût">
                                 </div>
@@ -80,6 +83,9 @@
                         <!--La note enchantée-->
                         <div class="restaurants__card">
                             <a href="la-note-enchantee.html">   
+                                <div class="new">
+                                    <p>Nouveau</p>
+                                </div>
                                 <div class="restaurants__card__image">
                                     <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
                                 </div>
