--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
             </a>
         </header>
 
+        <!--Loader-->
+        <div class="loader-wrapper">    
+            <div class="loader">
+                <div class="loader__circle loader__circle--1"></div>
+                <div class="loader__circle loader__circle--2"></div>
+                <div class="loader__circle loader__circle--3"></div>
+            </div>
+        </div>
         <main>
             
             <section>
